# data-pipeline-async

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CV.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod-like.yml  docker-compose.yml  pyproject.toml  requirements-audit.txt
.copilot/: AGENT_COMMANDS.md  README.md  project-config.yaml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/docs/: pooling-strategy.md
.github/instructions/: async-patterns.instructions.md  bash.instructions.md  crud.instructions.md  design-patterns.instructions.md  docker-ci-guide.md  fastapi-testing.instructions.md  fastapi.instructions.md  html-css.instructions.md  markdown.instructions.md  middle-tier-grind-tracking.md  models.instructions.md  phase-1-events.md  phase-2-scrapers.md  phase-3-ai-qdrant.md  phase-4-testing.md  phase-5-database.md  phase-6-security.md  phase-7-terraform.md  pydantic.instructions.md  python.instructions.md  solid-principles.instructions.md  sql.instructions.md  tests.instructions.md  toml.instructions.md  yaml.instructions.md
.github/prompts/: add-endpoint.prompt.md  add-model.prompt.md  alembic-migration.prompt.md  plan-Monorepo Microservice RestructureRaw.prompt.md  plan-MonorepoMicroserviceRestructure.prompt.md  plan-applyDockerfileImprovements.prompt.md  plan-backendMilestoneChecklist.prompt.md  plan-dataZooPlatform.prompt.md  plan-dataZooPlatformAlembicStrategySplit.prompt.md  plan-dataZooPlatformCanonicalRoadmap.prompt.md  plan-dataZooScaffolding.prompt.md  plan-foundationGapsClosure.prompt.md  plan-organizeTests.prompt.md  plan-phase10-service-hardening.prompt.md  plan-phase11-ci-workflow-matrix.prompt.md  plan-phase12-kubernetes-probes.prompt.md  (+8 more)
alembic/: env.py
app/: auth.py  cache.py  config.py  constants.py  crud.py  database.py  events.py  fetch.py  main.py  metrics.py  models.py  rate_limiting_advanced.py  schemas.py
docs/: 00-project-overview.md  01-system-setup.md  02-first-time-setup.md  03-daily-development.md  04-architecture-overview.md  09-backend-concepts-and-patterns.md  10-interview-prep-middle-plus.md  11-online-cloud-services-and-accounts.md  IMPLEMENTATION_COMPLETE.md  MIDDLE-TIER-GRIND-OUTPUT-GUIDE.md  RESOURCE_MANAGEMENT.md  WEEK1_LEARNINGS.md  alembic-python314-fix.md  api-auth-production-guide.md  api-auth-usage-examples.md  api-docs-authentication.md  architecture.md  be-learning-knowledge-base.md  cicd-iac-gitops-portable-strategy.md  cloud-deployment.md  commands.md  decisions.md  environment-setup.md  github-actions-security-hardening.md  gotchas.md  hands-on-commands.md  httpx-vs-aiohttp-comparison.md  milestone-3-rate-limiting.md  monorepo-structure.md  phase-1-portfolio-item.md  phase-5-advanced-sql-cqrs.md  pillar-1-core-backend.md  pillar-2-database.md  pillar-3-ops-infrastructure.md  pillar-3-scheduling.md  pillar-4-observability.md  pillar-5-security.md  pillar-6-ai-llm.md  pillar-7-data-etl.md  portfolio-phase-2-scrapers.md  (+14 more)
ingestor/: auth.py  cache.py  config.py  constants.py  crud.py  database.py  events.py  fetch.py  fetch_aiohttp.py  jobs.py  jobs_registry.py  main.py  metrics.py  models.py  notifications.py  rate_limiting.py  schemas.py  services_lifecycle.py  vector_search.py
libs/: __init__.py
scripts/: compose.sh  dev-services.sh  dev.sh  full_validation.sh  http_clients_demo.py  load_test.sh  load_test_pagination.js  locustfile.py  quality-checks.sh  run_tests.sh  seed_data.py  setup.sh  stats.sh  test_logging_formats.py  test_with_postgres.sh  update-base-image-digest.sh  verify-cache.sh  verify-requirements.sh
services/: README.md  __init__.py
services/analytics/: README.md  __init__.py  database.py  dependencies.py  main.py  pyproject.toml
services/analytics/routers/: __init__.py  analytics.py  ops.py
services/analytics/tests/unit/query_api/: __init__.py  test_analytics_schemas.py
services/inference/: README.md  __init__.py  constants.py  filters.py  main.py  pyproject.toml  schemas.py  vector_store.py
services/inference/routers/: __init__.py
services/ingestor/: README.md  __init__.py  auth.py  cache.py  config.py  constants.py  crud.py  database.py  events.py  jobs.py  jobs_registry.py  main.py  metrics.py  models.py  notifications.py  pyproject.toml  schemas.py  services_lifecycle.py  vector_search.py
services/ingestor/core/: __init__.py  background_workers.py  circuit_breaker.py  handlers.py  logging.py  retry.py  scheduler.py  sentry.py
services/ingestor/routers/: __init__.py  analytics.py  auth.py  background_processing.py  health_ingestion_jobs.py  notifications.py  records.py  records_v2.py  scraper.py  vector_search.py
services/ingestor/scrapers/: __init__.py  browser_scraper.py  html_scraper.py  http_scraper.py
services/ingestor/storage/: events.py  mongo.py
services/ingestor/tests/integration/: test_ingestion_jobs.py  test_notifications_api.py  test_scheduler.py
services/ingestor/tests/integration/records/: test_cache.py  test_cte_window_functions.py  test_materialized_views_and_partitioning.py  test_processed_at.py  test_v2_rate_limiting.py
services/ingestor/tests/integration/scrapers/: __init__.py
services/ingestor/tests/integration/storage/: test_events_idempotency.py
services/ingestor/tests/unit/: test_cache_list.py  test_cache_warming.py
services/ingestor/tests/unit/auth/: test_auth.py
services/ingestor/tests/unit/core/: test_notifications.py
services/webhook/: Dockerfile  README.md  __init__.py  constants.py  crud.py  exceptions.py  main.py  models.py  pyproject.toml  schemas.py
services/webhook/core/: __init__.py  database.py  secrets.py
services/webhook/routers/: __init__.py  admin.py  health.py  webhooks.py
services/webhook/services/: __init__.py  api_keys.py  ingestion.py  kafka_publisher.py  replay_daemon.py  signature.py
services/webhook/tests/integration/webhook/: conftest.py  test_webhooks.py
tests/: conftest.py  test_api.py  test_logging.py  test_performance.py  test_under_constraints.py
(+404 files in other folders)
