[project]
name = "data-pipeline-async"
version = "1.0.0"
description = "Week 1 data pipeline — async stack (SQLAlchemy async + asyncpg)"
requires-python = ">=3.14"

dependencies = [
    # Web framework
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Database (async)
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.30.0",
    # Database (sync, for Alembic migrations in production)
    "psycopg[binary]>=3.2",
    # Validation & config
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    # Logging
    "python-json-logger>=3.3.0",
    # Migrations
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.1.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.20.0",  # async SQLite for tests (no real PG needed)
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v -m 'not e2e'"
markers = [
    "unit: Fast, isolated unit tests (no I/O, no DB)",
    "integration: Tests that touch DB/ASGI client",
    "e2e: End-to-end or long-running tests (skipped by default)",
]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100
