[project]
name = "data-pipeline-async"
version = "1.0.0"
description = "Week 1 data pipeline — async stack (SQLAlchemy async + asyncpg)"
requires-python = ">=3.14"

dependencies = [
    # Web framework
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Database (async)
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.30.0",
    # Database (sync, for Alembic migrations in production)
    "psycopg[binary]>=3.2",
    # Validation & config
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    # Logging
    "python-json-logger>=3.3.0",
    # Authentication
    "pyjwt>=2.10.0",
    # Migrations
    "alembic>=1.13",
    # HTTP clients (async) — both for multi-tool exposure
    "httpx>=0.28.1",  # requests-like API, HTTP/2 support
    "aiohttp>=3.9.4",  # aiohttp-native API, mature, updated Mar 2026
    "prometheus-fastapi-instrumentator>=7.1.0",
    # Caching
    "redis>=5.2.0",  # async redis client
    # Event streaming
    "aiokafka>=0.11",  # async Kafka/Redpanda producer + consumer
    "motor>=3.3",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    # AI Gateway (Phase 3) — embeddings & vector search
    "sentence-transformers>=2.2.2",  # SentenceTransformer for embeddings
    "qdrant-client>=1.12.0",  # Qdrant vector database client
    # Resilience + Observability (Phase 4) — OTel distributed tracing
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.1.0",
    "pytest-postgresql>=6.1.0",  # PostgreSQL fixtures for EXPLAIN ANALYZE tests
    "httpx>=0.28.1",
    "aiosqlite>=0.20.0",  # async SQLite for tests (no real PG needed)
    "fakeredis[aioredis]>=2.22.0",  # in-memory redis for tests
    # Pre-commit hooks & linting
    "pre-commit>=4.1.1",
    "ruff>=0.15.10",
    # Load testing
    "locust>=2.32.0",
    # Type checker
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=html -v -m 'not e2e'"
filterwarnings = [
    "ignore::DeprecationWarning:slowapi",
]
markers = [
    "unit: Fast, isolated unit tests (no I/O, no DB)",
    "integration: Tests that touch DB/ASGI client",
    "e2e: End-to-end or long-running tests (skipped by default)",
    "browser: Browser-based tests using Playwright (may require system dependencies)",
    "mongo: MongoDB-dependent tests (skipped if MongoDB unavailable)",
]

# pytest-postgresql configuration for Docker-based testing
# To use: docker compose --profile test up db-test
# The fixture will auto-detect the service or skip gracefully
[tool.postgresql]
host = "localhost"
port = 5433
user = "postgres"
password = "postgres"
dbname = "test_database"
filterwarnings = [
    # slowapi depends on asyncio.iscoroutinefunction (deprecated in Python 3.15)
    # Will be fixed when slowapi updates; safe to ignore for now
    "ignore::DeprecationWarning:slowapi.*",
    # httpx per-request cookies API works but is deprecated; our test pattern is correct
    "ignore:Setting per-request cookies.*:DeprecationWarning:httpx.*",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__main__.py",
    "*/migrations/*",
    "*/alembic/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM117", "B008"]  # Allow nested with statements and Depends() in defaults (FastAPI pattern)

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[[tool.ty.overrides]]
include = ["app", "tests"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
# invalid-assignment = "ignore"

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
]
skips = [
    "B101",  # assert_used in tests
]
