[project]
name = "analytics"
version = "0.1.0"
description = "Read-side CQRS service — materialized views and query API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.45.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.30.0",
    "python-json-logger>=4.1.0",
]
