[project]
name = "inference"
version = "0.1.0"
description = "AI vendor adapter — embeddings and vector search via Qdrant"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.45.0",
    "pydantic>=2.13.3",
    "sentence-transformers>=5.4.1",
    "qdrant-client>=1.12.0",
]
